tests/files/success/early_return.rl
fn test() {
    let x = 2;
    if x == 2 {
        return true;
    } else {
        return false;
    }
}

if test() {
    print("pass");
} else {
    print("fail");
}
