tests/files/fail/add_2_types.rl
let x = 2 + "test";
print(x);
